# fipsy

./: .gitignore  CLAUDE.md  README.md  VISION.md  pyproject.toml
fipsy/: commands.py  db.py  ipfs.py  main.py
fipsy/tui/: app.py  screens.py  styles.tcss  widgets.py  workers.py
